k8s/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: learnivo
  labels:
    name: learnivo
